# n-body

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: .clangd.in  create_clangd.cmake  embed.cmake  merge_compile_commands.cmake  sanitizer.cmake  sanitizer_trap.cmake
include/: backend.h  backend_shader.h  bh_tree.h  camera.h  cuda_tick.h  defines.h  log.h  nuklear_defines.h  octree.h  opencl_kernel.h  opencl_kernel.h.in  opencl_tick.h  particle.h  quad.h  shader.h  shader.h.in  solver.h  state.h  thread_creator.h  vec3.h
shader/: blur.comp  compute_shader_solve.comp  compute_shader_update.comp  main.frag  main.fs  main.vert  main.vs  map.comp  map.frag  map.geom  map.vert  shader_includes.glsl  sub.comp
src/: Octree.c  arena.c  backend.c  backend_shader.c  bh_tree.c  camera.c  cuda_tick.cu  input.c  main.c  nuklear_impl.c  opencl_kernel.cl  opencl_tick.c  particle.c  quad.c  shell.html  solver.c  thread_creator.c  vec3.c
